// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`class attribute 1`] = `
"class Builder {
    constructor(data) {
      this.el = template.cloneNode(true);
      let ref0 = this.el;
      this.refs = [ref0];
      this.data = [];
      this.update(data);
    }
    update(data) {
      const refs = this.refs;
      const currentData = this.data;
      const nextData = data.data;
      if (nextData[0] !== currentData[0]) { updateClass(refs[0], currentData[0], nextData[0]); }
      this.data = nextData;
    }
  }"
`;

exports[`simple attribute 1`] = `
"class Builder {
    constructor(data) {
      this.el = template.cloneNode(true);
      let ref0 = this.el;
      this.refs = [ref0];
      this.data = [];
      this.update(data);
    }
    update(data) {
      const refs = this.refs;
      const currentData = this.data;
      const nextData = data.data;
      if (nextData[0] !== currentData[0]) { let value = nextData[0]; refs[0].setAttribute(\\"hello\\", value === true ? \\"\\" : value);}
      this.data = nextData;
    }
  }"
`;
